# nes-deck

./: .gitattributes  .gitignore  .impeccable.md  AGENTS.md  ARCHITECTURE.md  AUTOLITH.org  BUILD.md  Cargo.toml  DECK_NOTES.md  FOSS_GAMES.md  IMPLEMENTATION_PLAN.md  README.md  THIRD_PARTY.md  deck.conf.example  deny.toml  flake.nix  rust-toolchain.toml
.github/workflows/: ci.yml
assets/settings-cog/: UPSTREAM.txt
chiptunes/: README.md  SHA256SUMS
crates/retro-deck-apps/: Cargo.toml
crates/retro-deck-apps/src/: lib.rs  ten_seconds.rs
crates/retro-deck-apps/src/chiptune/: catalog.rs  gme.rs  mod.rs  model.rs  ogg.rs  playback.rs  render.rs
crates/retro-deck-apps/src/ten_seconds/: render.rs
crates/retro-deck-audio/: Cargo.toml
crates/retro-deck-config/: Cargo.toml
crates/retro-deck-config/src/: catalog.rs  credits.rs  lib.rs  palette.rs  system.rs
crates/retro-deck-dashboard/: Cargo.toml  deny.toml
crates/retro-deck-dashboard/native/: Cargo.toml
crates/retro-deck-dashboard/native/src/: application.rs  bmc_ui.rs  catalog.rs  gamepad.rs  launch.rs  launch_options.rs  lib.rs  native_catalog.rs  native_cover.rs  native_theme.rs  state.rs
crates/retro-deck-dashboard/src/: artwork.rs  assets.rs  audio.rs  bmc_ui.rs  catalog.rs  controls.rs  credits.rs  launch.rs  lib.rs  native_catalog.rs  network_worker.rs  preference_io.rs  preference_worker.rs  preferences.rs  render.rs  settings.rs  state.rs  wifi.rs  wifi_render.rs  wifi_session.rs  wifi_writer.rs
crates/retro-deck-emulator/: Cargo.toml  build.rs
crates/retro-deck-emulator/native/: c_octo_adapter.c
crates/retro-deck-emulator/src/: lib.rs
crates/retro-deck-emulator/src/chip8/: config.rs  core.rs  input.rs  mod.rs  presentation.rs  program.rs
crates/retro-deck-emulator/src/libretro/: abi.rs  audio.rs  callbacks.rs  content.rs  environment.rs  input.rs  keyboard.rs  mod.rs  options.rs  profile.rs  save.rs  session.rs  video.rs
crates/retro-deck-platform/: Cargo.toml
crates/retro-deck-platform/src/: audio.rs  display.rs  file.rs  input.rs  lib.rs  network.rs  process.rs  shutdown.rs  time.rs  wayland.rs  wayland_protocol.rs
crates/retro-deck-platform/src/audio/: application_pcm.rs  cue_worker.rs  pcm_worker.rs  square_pcm.rs  stream_worker.rs  tone_cues.rs
crates/retro-deck-platform/src/input/: keyboard.rs  linux.rs  tty.rs  wayland.rs
crates/retro-deck-policy/: Cargo.toml
crates/retro-deck-policy/src/: lib.rs  message.rs  supervisor.rs
crates/retro-deck-ui/: Cargo.toml
crates/retro-deck-uploader/: Cargo.toml
crates/retro-deck-uploader/src/: address.rs  application.rs  auth.rs  bmc.rs  catalog.rs  cli.rs  file.rs  form.rs  http.rs  lib.rs  main.rs  palette.rs  password.rs  process.rs  rom.rs  runtime.rs  store.rs  web.rs
crates/retro-deck-uploader/src/form/: multipart.rs  urlencoded.rs
crates/retro-deck-uploader/src/http/: request.rs  response.rs
deploy/: ecl  nes-deck.init
deploy/application/: manifest.json
deploy/games/: outlaw.ch8.cfg  spaceracer.ch8.cfg
deploy/menu/: ASSETS.md  README.md  compile-catalog.lisp  credits.tsv  deck-keyboard-quirks  deck-menu-launcher  fetch-covers  games.sexp  games.tsv  knekko-settings-icons.tsv  nes-deck-keyboard.hotplug  nes-deck-swap.init  nes-deck.init  palette.tsv  retro-deck-refresh
deploy/terminal/: fonts.conf  retro-terminal
deploy/uploader/: README.md  nes-deck-uploader.init
deploy/widget/: manifest.json  retro-deck
docs/: CODE_SIZE.md  TECHNICAL_DOC.md  USER_DOC.md  USER_STORIES.md  migration-baseline.md  swipe-rendering-postmortem.org
lisp/: README.md  credits.lisp  dashboard.lisp  package.lisp  policy.lisp  process.lisp  retro-deck.asd  run-worker.lisp  settings.lisp  startup.lisp  ui.lisp  wifi.lisp
lisp/tests/: run.lisp
native/: Cargo.toml
native/src/: audio.rs  canvas.rs  control_file.rs  controls.rs  fbdev.rs  font.rs  input.rs  lib.rs  main.rs  network.rs  polling.rs  process.rs  projection.rs  protocol.rs  raster.rs  regular_file.rs  state_file.rs  wayland.rs
nix/: ecl-arm-static.nix  runtime-licenses.nix
ops/: check-deck.sh  configure-deck.sh  deploy.sh  provision-deck.sh
patches/: bmc-nearest-neighbor-filter.patch  chibi-static-module-path.patch  infones-apu-noise.patch  infones-apu-quality.patch  infones-apu-register.patch  infones-apu.patch
protocol/: deck-widget-v1.xml  wlr-layer-shell-LICENSE  wlr-layer-shell-unstable-v1.xml
roms/: README.md  SHA256SUMS
src/: InfoNES_System_Deck.cpp  chip8_core.c  chip8_core.h  chip8_deck.cpp  chiptune_deck.cpp  deck_menu.cpp  deck_runtime.cpp  deck_runtime.h  deck_wayland.cpp  deck_wayland.h  gb_deck.cpp  joypad_input.cpp  knekko_settings_icons_generated.inc  libretro_deck.cpp  menu_catalog.cpp  menu_catalog.h  menu_credits.cpp  menu_credits.h  menu_io.cpp  menu_io.h  menu_network.cpp  menu_network.h  menu_sound.cpp  menu_sound.h  menu_state.cpp  menu_state.h  menu_text.cpp  menu_text.h  menu_ui.cpp  menu_ui.h  nes_apu_noise.h  nes_audio_mixer.h  nes_sram.h  ten_seconds_deck.cpp  zx_keyboard.h
terminal/: PROVENANCE.md
tests/: catalog_test.sh  check_deck_test.sh  chip8_core_test.c  deck_keyboard_quirks_test.sh  deck_menu_test.cpp  deck_runtime_test.cpp  deck_wifi_profile_add_test.sh  deck_wifi_select_test.sh  deploy_activation_test.sh  deploy_config_test.sh  deploy_lisp_tree_test.sh  fetch_covers_test.sh  joypad_input_test.cpp  joypad_input_zx_test.cpp  licenses_test.sh  lisp_policy_test.lisp  menu_catalog_test.cpp  menu_credits_test.cpp  menu_network_test.cpp  menu_state_test.cpp  menu_text_test.cpp  menu_ui_test.cpp  native_ecl_smoke.lisp.in  nes_apu_noise_test.cpp  nes_audio_test.cpp  nes_deck_swap_test.sh  nes_sram_test.cpp  provision_config_test.sh  render_screenshots_test.sh  retro_deck_refresh_test.sh  retro_terminal_test.sh  rom_library_test.sh  run-host-tests.sh  settings_icons_test.sh  vendor_emulators_test.sh  verify-arm-builds.sh  zx_keyboard_test.cpp
uploader/: bmc_scene.go  bmc_scene_test.go  go.mod  knekko_settings_icons_generated.go  main.go  palette.go  password.go  rom.go  server.go  settings_icon_assets.go  ui.go  uploader_test.go
(+58 files in other folders)
