[package]
name = "retrodeck-native"
version = "0.1.0"
edition = "2024"
publish = false

[[bin]]
name = "retrodeck-native"
path = "src/main.rs"
test = false

[profile.release]
panic = "abort"
strip = true

[dependencies]
png = "=0.18.0"
rustix = { version = "=1.1.4", features = ["event", "fs", "mm"] }
tiny-skia = { version = "=0.12.0", default-features = false, features = ["std"] }
wayland-backend = "=0.3.15"
wayland-client = "=0.31.14"
wayland-scanner = "=0.31.10"
