[package]
name = "retro-deck-apps"
description = "Native application models and renderers for Retro Deck"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[features]
chiptune-gme = []

[dependencies]
lewton = "0.10.2"
retro-deck-audio = { path = "../retro-deck-audio" }
retro-deck-platform = { path = "../retro-deck-platform" }
retro-deck-policy = { path = "../retro-deck-policy" }

[lib]
path = "src/lib.rs"

[[bin]]
name = "chiptune-deck"
path = "src/bin/chiptune-deck.rs"
required-features = ["chiptune-gme"]

[lints]
workspace = true
