[package]
name = "retro-deck-config"
description = "Shared configuration schemas for Retro Deck"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[features]
default = []
serde = ["dep:serde"]

[dependencies]
retro-deck-policy = { path = "../retro-deck-policy" }
serde = { version = "1.0.219", features = ["derive"], optional = true }

[lib]
path = "src/lib.rs"

[lints]
workspace = true
