[package]
name = "retro-deck-dashboard"
description = "Dashboard model, renderer, and runtime for Retro Deck"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[features]
bmc-native = [
    "dep:anyhow",
    "dep:bmc-gpu-render-lock",
    "dep:bmc-log",
    "dep:bmc-render",
    "dep:bmc-widget",
    "dep:glow",
    "dep:tracing",
]

[dependencies]
anyhow = { version = "1.0.98", optional = true }
bmc-gpu-render-lock = { git = "ssh://git@gitlab.ii.zone/bos/bmc-main.git", rev = "d2cc2a22ab27356733cedc523824b8c7f005d048", optional = true }
bmc-log = { git = "ssh://git@gitlab.ii.zone/bos/bmc-main.git", rev = "d2cc2a22ab27356733cedc523824b8c7f005d048", optional = true }
bmc-render = { git = "ssh://git@gitlab.ii.zone/bos/bmc-main.git", rev = "d2cc2a22ab27356733cedc523824b8c7f005d048", optional = true }
bmc-widget = { git = "ssh://git@gitlab.ii.zone/bos/bmc-main.git", rev = "d2cc2a22ab27356733cedc523824b8c7f005d048", features = ["gpu"], optional = true }
glow = { version = "0.16.0", optional = true }
png = "0.18.1"
retro-deck-audio = { path = "../retro-deck-audio" }
retro-deck-config = { path = "../retro-deck-config" }
retro-deck-platform = { path = "../retro-deck-platform" }
retro-deck-ui = { path = "../retro-deck-ui" }
tracing = { version = "0.1.41", optional = true }

[lib]
path = "src/lib.rs"

[[bin]]
name = "retro-deck"
path = "src/bin/retro-deck.rs"
required-features = ["bmc-native"]

[lints]
workspace = true
