[package]
name = "retro-deck-dashboard"
description = "Dashboard model, renderer, and runtime for Retro Deck"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[features]
default = ["legacy-runtime"]
legacy-runtime = [
    "dep:png",
    "dep:retro-deck-audio",
    "dep:retro-deck-platform",
    "dep:retro-deck-ui",
]
bmc-native = [
    "dep:anyhow",
    "dep:bmc-gpu-render-lock",
    "dep:bmc-log",
    "dep:bmc-render",
    "dep:bmc-widget",
    "dep:glow",
    "dep:rustix",
    "dep:tracing",
]

[dependencies]
anyhow = { version = "1.0.98", optional = true }
bmc-gpu-render-lock = { git = "ssh://git@gitlab.ii.zone/bos/bmc-main.git", rev = "308836b6e7844dd1ee7b612b228e498284be31da", optional = true }
bmc-log = { git = "ssh://git@gitlab.ii.zone/bos/bmc-main.git", rev = "308836b6e7844dd1ee7b612b228e498284be31da", optional = true }
bmc-render = { git = "ssh://git@gitlab.ii.zone/bos/bmc-main.git", rev = "308836b6e7844dd1ee7b612b228e498284be31da", optional = true }
bmc-widget = { git = "ssh://git@gitlab.ii.zone/bos/bmc-main.git", rev = "308836b6e7844dd1ee7b612b228e498284be31da", features = ["gpu"], optional = true }
glow = { version = "0.16.0", optional = true }
png = { version = "0.18.1", optional = true }
retro-deck-audio = { path = "../retro-deck-audio", optional = true }
retro-deck-config = { path = "../retro-deck-config" }
retro-deck-platform = { path = "../retro-deck-platform", optional = true }
retro-deck-ui = { path = "../retro-deck-ui", optional = true }
rustix = { version = "1.1.4", features = ["fs"], optional = true }
tracing = { version = "0.1.41", optional = true }

[lib]
path = "src/lib.rs"

[[bin]]
name = "deck-dashboard"
path = "src/bin/deck-dashboard.rs"
required-features = ["legacy-runtime"]

[[bin]]
name = "render-dashboard"
path = "src/bin/render-dashboard.rs"
required-features = ["legacy-runtime"]

[[bin]]
name = "retro-deck"
path = "src/bin/retro-deck.rs"
required-features = ["bmc-native"]

[lints]
workspace = true
