[package]
name = "retro-deck-emulator"
description = "Safe emulator hosts and runtime models for Retro Deck"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[build-dependencies]
cc = "1.3.0"

[dependencies]
retro-deck-audio = { path = "../retro-deck-audio" }
retro-deck-platform = { path = "../retro-deck-platform" }
rustix = { version = "1.1.4", features = ["fs"] }

[dev-dependencies]
tempfile = "3.24.0"

[lib]
path = "src/lib.rs"

[lints]
workspace = true
