[package]
name = "retro-deck-emulator"
description = "Safe emulator hosts and runtime models for Retro Deck"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[build-dependencies]
cc = { version = "1.3.0", optional = true }

[dependencies]
getrandom = "0.2.16"
retro-deck-audio = { path = "../retro-deck-audio" }
retro-deck-platform = { path = "../retro-deck-platform" }
rustix = { version = "1.1.4", features = ["fs"] }

[dev-dependencies]
tempfile = "3.24.0"

[features]
default = ["chip8"]
chip8 = ["dep:cc"]
libretro-linked = []

[lib]
path = "src/lib.rs"

[[bin]]
name = "libretro-deck"
path = "src/bin/libretro-deck.rs"
required-features = ["libretro-linked"]

[[bin]]
name = "chip8-deck"
path = "src/bin/chip8-deck.rs"
required-features = ["chip8"]

[lints]
workspace = true
