[package]
name = "retro-deck-platform"
description = "Linux device adapters and deterministic input contracts for Retro Deck"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
deck-gamepad-v1 = { path = "../../vendor/bmc/deck-gamepad-v1" }
evdev = "0.13.2"
libc = "0.2.186"
memmap2 = "0.9.11"
retro-deck-audio = { path = "../retro-deck-audio" }
rustix = { version = "1.1.4", features = ["event", "fs", "process", "termios"] }
signal-hook = "0.4.4"
wayland-client = "0.31.14"
wayland-protocols-wlr = { version = "0.3.12", features = ["client"] }

[lib]
path = "src/lib.rs"

[lints]
workspace = true
