[package]
name = "retro-deck-policy"
description = "Bounded Common Lisp policy protocol for Retro Deck"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[lib]
path = "src/lib.rs"

[dependencies]
tokio = { version = "1.47.0", features = ["io-util", "macros", "process", "rt", "sync", "time"] }

[lints]
workspace = true
