[package]
name = "retro-deck-uploader"
description = "Authenticated ROM and appearance service for Retro Deck"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
base64 = "0.22.1"
getrandom = "0.2.16"
pbkdf2 = "0.12.2"
rustix = { version = "1.0.8", features = ["fs", "process"] }
sha2 = "0.10.9"
subtle = "2.6.1"

[dev-dependencies]
tempfile = "3.20.0"

[lib]
path = "src/lib.rs"

[lints]
workspace = true
